healthcare-plus/force-app/main/default/objects/Care_Task__c/Care_Task__c.object-meta.xml
<CustomObject>
    <label>Care Task</label>
    <nameField>
        <label>Care Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>