healthcare-plus/force-app/main/default/objects/Care_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Tasks</relationshipLabel>
    <relationshipName>Care_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>