healthcare-plus/force-app/main/default/objects/Care_Task__c/fields/Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notes__c</fullName>
    <label>Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>