healthcare-plus/force-app/main/default/objects/Care_Task__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Care Tasks</relationshipLabel>
    <relationshipName>Care_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>