healthcare-plus/force-app/main/default/objects/Care_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Follow-up</fullName>
            </value>
            <value>
                <fullName>Insurance Verification</fullName>
            </value>
            <value>
                <fullName>Lab Follow-up</fullName>
            </value>
            <value>
                <fullName>Clinical Review</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>